Fixed grid gap

--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ main {
   display: grid;
   grid-auto-flow: row;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
+  grid-gap: 20px;
 }
 
 footer {
